--- a/mirgovorit/templates/includes/base.html
+++ b/mirgovorit/templates/includes/base.html
@@ -20,27 +20,14 @@
 <header>
     <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
         <div class="container">
-            <a class="navbar-brand" href="{% url 'cookbook:recipes' %}">Cookbook</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+            <a class="navbar-brand" href="{% url 'cookbook:main' %}">Cookbook</a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item dropdown ">
-                        <a class="nav-link dropdown-toggle text-white" href="#" role="button"
-                           data-bs-toggle="dropdown" aria-expanded="false">
-                            Информация
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item  text-white" href="#">Доставка и оплата</a></li>
-                            <li><a class="dropdown-item  text-white" href="#">Контактная информация</a></li>
-                            <li><a class="dropdown-item  text-white" href="#}">Про нас</a></li>
-                        </ul>
+                    <li class="nav-item">
+                        <a class="nav-link  text-white" href="{% url 'cookbook:recipes' %}">Рецепты</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link  text-white" href="#">Корзина</a>
+                        <a class="nav-link  text-white" href="{% url 'cookbook:products' %}">Продукты</a>
                     </li>
                 </ul>
             </div>
@@ -62,11 +49,6 @@
         </div>
     </div>
 </section>
-<footer class="py-4 bg-dark">
-    <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Svitsov 2024</p>
-    </div>
-</footer>
 <script src="{% static 'deps/js/jquery/jquery-3.7.0.min.js' %}"></script>
 <script src="{% static 'deps/js/jquery-events.js' %}"></script>
 <script src="{% static 'deps/js/jquery-ajax.js' %}"></script>
